<resources>
    <string name="app_name">Laboratorio 05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_movie1">La pelicula se centra en el personaje de Anakin Skywalker, quien está siendo tentado por el Lado Oscuro de la fuerza también muestra la caida de la República Galáctica y el ascenso del Emperador Palpatine.</string>
    <string name="titleMovi">Star Wars episodio 3: La venganza de los Sith</string>
    <string name="category">Ciencia Ficción</string>
    <string name="calification1">9.8</string>
    <string name="imagen_description">imagen movie star wars</string>
    <string name="titleMovie1">Star Wars episodio 3: La venganza de los Sith</string>
    <string name="calificationMovie1">9.8</string>
    <string name="descriptionMOvie2">harry potter imagen</string>
    <string name="tittleMovie2">Harry Potter y la Piedra Filosofal</string>
    <string name="calificationMovie2">9.5</string>
    <string name="tittle">Billboard</string>
    <string name="star_wars_movie">star WARS MOVIE</string>
    <string name="title1">New Movie</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="category1">Category</string>
    <string name="calification">Calification</string>
    <string name="add_movie">add movie</string>
</resources>