<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.SecondFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:text="@string/title1"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_movie"
            android:layout_width="match_parent"

            android:layout_height="77dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/category1"
        android:textColorHint="@color/white"

        app:boxBackgroundColor="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_category"
            android:layout_width="match_parent"

            android:layout_height="77dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:textColorHint="@color/white"

        app:boxBackgroundColor="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_description"
            android:layout_width="match_parent"

            android:layout_height="77dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/calification"
        android:textColorHint="@color/white"

        app:boxBackgroundColor="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_calification"
            android:layout_width="match_parent"

            android:layout_height="77dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitMovie"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField4" />


</androidx.constraintlayout.widget.ConstraintLayout>